--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 *.exe *.out *.app
 
 ###CMake###
-CMakeCache.txt CMakeFiles Makefile cmake_install.cmake install_manifest.txt
+CMakeCache.txt CMakeFiles/ Makefile cmake_install.cmake install_manifest.txt
 
 ###OSX###
 .DS_Store .AppleDouble .LSOverride Icon
