--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore the build directory
-*/build build
+*/build
+build
  
 ###C###
 
@@ -7,30 +8,51 @@
 *.o
 
 # Libraries
-*.lib *.a
+*.lib
+*.a
 
 # Shared objects (inc. Windows DLLs)
-*.dll *.so *.so.* *.dylib
+*.dll
+*.so
+*.so.*
+*.dylib
 
 # Executables
-*.exe *.out *.app
+*.exe
+*.out
+*.app
 
 ###CMake###
-CMakeCache.txt CMakeFiles/ Makefile cmake_install.cmake install_manifest.txt
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
 
 ###OSX###
-.DS_Store .AppleDouble .LSOverride Icon
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
 
 # Thumbnails
 ._*
 
 # Files that might appear on external disk
-.Spotlight-V100 .Trashes
+.Spotlight-V100
+.Trashes
 
 ###Windows###
 
 # Windows image file caches
-Thumbs.db ehthumbs.db
+Thumbs.db
+ehthumbs.db
 
 # Folder config file
 Desktop.ini
@@ -39,4 +61,5 @@ Desktop.ini
 $RECYCLE.BIN/
 
 ###Linux###
-.* *~
+.*
+*~
