add debug challenge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(arrays)
 add_subdirectory(strings)
 add_subdirectory(system_programming)
 add_subdirectory(bitmap)
-#add_subdirectory(debug)
+add_subdirectory(debug)
 #add_subdirectory(error_handling)
 #add_subdirectory(structures)
 #add_subdirectory(allocation)
